--- a/GatewayConference/Tablecells/SponserCell/SponserCell.xib
+++ b/GatewayConference/Tablecells/SponserCell/SponserCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -16,26 +16,26 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zwl-bc-9Lq">
-                        <rect key="frame" x="72" y="52" width="289" height="90"/>
+                        <rect key="frame" x="92" y="52" width="289" height="90"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQK-Ef-OZh">
-                                <rect key="frame" x="46" y="19" width="230" height="26"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQK-Ef-OZh">
+                                <rect key="frame" x="0.0" y="19" width="289" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="ia1-Kz-CGy"/>
-                                    <constraint firstAttribute="width" constant="230" id="tVd-NF-ARm"/>
+                                    <constraint firstAttribute="width" constant="289" id="tVd-NF-ARm"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="STHeitiTC-Medium" family="Heiti TC" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g5E-Zf-HnC">
-                                <rect key="frame" x="46" y="55" width="196" height="30"/>
+                                <rect key="frame" x="0.0" y="58" width="289" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="196" id="ZgB-qj-mSy"/>
+                                    <constraint firstAttribute="width" constant="289" id="ZgB-qj-mSy"/>
                                     <constraint firstAttribute="height" constant="30" id="dfR-q7-Yx9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Visit US Here">
+                                <state key="normal" title="aaa">
                                     <color key="titleColor" red="0.17254902422428131" green="0.9960784912109375" blue="0.96078437566757202" alpha="1" colorSpace="deviceRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -44,14 +44,14 @@
                         <color key="backgroundColor" red="0.43137254899999999" green="0.40000000000000002" blue="0.39607843139999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="HQK-Ef-OZh" firstAttribute="top" secondItem="Zwl-bc-9Lq" secondAttribute="top" constant="19" id="2Gl-1E-jRD"/>
-                            <constraint firstItem="g5E-Zf-HnC" firstAttribute="top" secondItem="HQK-Ef-OZh" secondAttribute="bottom" constant="10" id="5c9-vl-AAZ"/>
+                            <constraint firstItem="g5E-Zf-HnC" firstAttribute="top" secondItem="HQK-Ef-OZh" secondAttribute="bottom" constant="13" id="5c9-vl-AAZ"/>
                             <constraint firstItem="HQK-Ef-OZh" firstAttribute="leading" secondItem="g5E-Zf-HnC" secondAttribute="leading" id="GVQ-fk-0MQ"/>
                             <constraint firstAttribute="height" constant="90" id="fx5-fS-cVw"/>
-                            <constraint firstItem="HQK-Ef-OZh" firstAttribute="leading" secondItem="Zwl-bc-9Lq" secondAttribute="leading" constant="46" id="wXS-Lh-tZR"/>
+                            <constraint firstItem="HQK-Ef-OZh" firstAttribute="leading" secondItem="Zwl-bc-9Lq" secondAttribute="leading" id="wXS-Lh-tZR"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XZg-kL-8oM">
-                        <rect key="frame" x="34" y="18" width="80" height="80"/>
+                        <rect key="frame" x="7" y="57" width="80" height="80"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="80" id="4Wc-qG-ZEb"/>
                             <constraint firstAttribute="width" constant="80" id="jcB-Jo-HaA"/>
@@ -60,11 +60,11 @@
                 </subviews>
                 <color key="backgroundColor" red="0.37647058823529411" green="0.24705882352941178" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="Zwl-bc-9Lq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="64" id="10b-LJ-eD0"/>
+                    <constraint firstItem="Zwl-bc-9Lq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="84" id="10b-LJ-eD0"/>
                     <constraint firstItem="Zwl-bc-9Lq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="44" id="97k-dh-HYe"/>
-                    <constraint firstItem="XZg-kL-8oM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="EXE-Cp-Adu"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Zwl-bc-9Lq" secondAttribute="trailing" constant="25" id="apS-YM-psm"/>
-                    <constraint firstItem="XZg-kL-8oM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="26" id="ksO-z5-fHa"/>
+                    <constraint firstItem="XZg-kL-8oM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="49" id="EXE-Cp-Adu"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Zwl-bc-9Lq" secondAttribute="trailing" constant="5" id="apS-YM-psm"/>
+                    <constraint firstItem="XZg-kL-8oM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-1" id="ksO-z5-fHa"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -73,7 +73,7 @@
                 <outlet property="sponser_site" destination="g5E-Zf-HnC" id="Eh1-dN-hRq"/>
                 <outlet property="sponser_title" destination="HQK-Ef-OZh" id="kCm-X3-ibH"/>
             </connections>
-            <point key="canvasLocation" x="410" y="344"/>
+            <point key="canvasLocation" x="410" y="336"/>
         </tableViewCell>
     </objects>
 </document>
