--- a/GatewayConference/Base.lproj/Main.storyboard
+++ b/GatewayConference/Base.lproj/Main.storyboard
@@ -325,8 +325,8 @@
                                     <constraint firstAttribute="height" constant="120" id="G83-cc-2AD"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfC-Nc-DUM">
-                                <rect key="frame" x="135" y="349" width="330" height="32"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfC-Nc-DUM">
+                                <rect key="frame" x="135" y="340" width="330" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="330" id="PpO-md-dI9"/>
                                     <constraint firstAttribute="height" constant="32" id="yj1-1v-ZdC"/>
@@ -335,23 +335,33 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dor-ci-312">
-                                <rect key="frame" x="135" y="419" width="330" height="32"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ddd" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dor-ci-312">
+                                <rect key="frame" x="135" y="539" width="330" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="32" id="auO-N6-TqQ"/>
                                     <constraint firstAttribute="width" constant="330" id="jv5-ZH-dtn"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9u8-7a-6tZ">
-                                <rect key="frame" x="135" y="483" width="330" height="55"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ccc" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9u8-7a-6tZ">
+                                <rect key="frame" x="135" y="457" width="330" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="330" id="ZU6-f3-Rh6"/>
                                     <constraint firstAttribute="height" constant="55" id="oin-Q0-a5D"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bbb" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ph5-ug-6xb">
+                                <rect key="frame" x="135" y="398" width="330" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="330" id="t3B-Nk-3tK"/>
+                                    <constraint firstAttribute="height" constant="32" id="v2k-yk-tqo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -359,17 +369,19 @@
                         <color key="backgroundColor" red="0.37254901960784315" green="0.24705882352941178" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="lfC-Nc-DUM" firstAttribute="centerX" secondItem="LSb-Pu-fwn" secondAttribute="centerX" id="2b6-CA-5yH"/>
+                            <constraint firstItem="ph5-ug-6xb" firstAttribute="top" secondItem="9u8-7a-6tZ" secondAttribute="bottom" constant="-114" id="5le-zs-Pph"/>
                             <constraint firstItem="Dor-ci-312" firstAttribute="leading" secondItem="lfC-Nc-DUM" secondAttribute="leading" id="8k3-6V-uBZ"/>
-                            <constraint firstItem="Dor-ci-312" firstAttribute="top" secondItem="lfC-Nc-DUM" secondAttribute="bottom" constant="38" id="CS1-KN-dPA"/>
-                            <constraint firstItem="lfC-Nc-DUM" firstAttribute="top" secondItem="cgS-J6-cVG" secondAttribute="bottom" constant="45" id="Hb0-fF-tqs"/>
+                            <constraint firstItem="Dor-ci-312" firstAttribute="top" secondItem="lfC-Nc-DUM" secondAttribute="bottom" constant="167" id="CS1-KN-dPA"/>
+                            <constraint firstItem="lfC-Nc-DUM" firstAttribute="top" secondItem="cgS-J6-cVG" secondAttribute="bottom" constant="36" id="Hb0-fF-tqs"/>
                             <constraint firstItem="LSb-Pu-fwn" firstAttribute="top" secondItem="WOE-n3-E7q" secondAttribute="bottom" constant="80" id="I7E-s2-Wpq"/>
                             <constraint firstItem="Ono-Ed-FSK" firstAttribute="top" secondItem="WOE-n3-E7q" secondAttribute="bottom" constant="438" id="IHv-Ly-nWY"/>
                             <constraint firstItem="Dor-ci-312" firstAttribute="leading" secondItem="9u8-7a-6tZ" secondAttribute="leading" id="UAq-A4-Dbg"/>
                             <constraint firstItem="WOE-n3-E7q" firstAttribute="top" secondItem="qNM-VA-HfY" secondAttribute="bottom" constant="8" symbolic="YES" id="ULf-4E-T55"/>
                             <constraint firstItem="cgS-J6-cVG" firstAttribute="top" secondItem="WOE-n3-E7q" secondAttribute="bottom" constant="22" id="V7q-Eh-vfB"/>
-                            <constraint firstItem="9u8-7a-6tZ" firstAttribute="top" secondItem="Dor-ci-312" secondAttribute="bottom" constant="32" id="b89-vq-zdg"/>
+                            <constraint firstItem="9u8-7a-6tZ" firstAttribute="top" secondItem="Dor-ci-312" secondAttribute="bottom" constant="-114" id="b89-vq-zdg"/>
                             <constraint firstItem="cgS-J6-cVG" firstAttribute="centerX" secondItem="WOE-n3-E7q" secondAttribute="centerX" id="bBy-Q7-YBg"/>
                             <constraint firstItem="LSb-Pu-fwn" firstAttribute="leading" secondItem="5AO-Gp-XYv" secondAttribute="leading" id="gdy-Yq-NgM"/>
+                            <constraint firstItem="ph5-ug-6xb" firstAttribute="leading" secondItem="9u8-7a-6tZ" secondAttribute="leading" id="kvJ-sF-zZX"/>
                             <constraint firstItem="cgS-J6-cVG" firstAttribute="centerX" secondItem="LSb-Pu-fwn" secondAttribute="centerX" id="lpj-XY-1wU"/>
                             <constraint firstItem="cgS-J6-cVG" firstAttribute="centerY" secondItem="LSb-Pu-fwn" secondAttribute="centerY" id="t5u-FV-osS"/>
                             <constraint firstItem="WOE-n3-E7q" firstAttribute="centerX" secondItem="5AO-Gp-XYv" secondAttribute="centerX" id="zx9-kJ-psG"/>
@@ -383,6 +395,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="fbEmailIDlbl" destination="ph5-ug-6xb" id="hdt-BI-Wyx"/>
                         <outlet property="fbIDLabel" destination="Dor-ci-312" id="zf3-nY-dyg"/>
                         <outlet property="fbLinkLabel" destination="9u8-7a-6tZ" id="o4G-uM-I5y"/>
                         <outlet property="nameLable" destination="lfC-Nc-DUM" id="cWf-DF-Hty"/>
@@ -781,9 +794,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="systemMenuLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="fKR-Am-W7z">
-                                <rect key="frame" x="16" y="109" width="568" height="71"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hrO-9m-c4f">
                                 <rect key="frame" x="16" y="196" width="568" height="194"/>
                                 <string key="text">SurveyMonkey is lucky to have Wufoo, the leader in online form creation, as a part of the family.  You can embed forms within your survey in a number of clever use cases that take advantage of Wufoo capabilities, like the following:</string>
@@ -792,30 +802,38 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0xy-fU-qNb">
-                                <rect key="frame" x="151" y="426" width="298" height="41"/>
+                                <rect key="frame" x="152" y="426" width="298" height="41"/>
+                                <color key="backgroundColor" red="0.5725490196078431" green="0.78431372549019607" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="41" id="3Ne-9P-fWV"/>
                                     <constraint firstAttribute="width" constant="298" id="up7-FH-Lmv"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="28"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" image="Survey.png">
+                                <state key="normal" title="Take Survey">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="visitServeySite:" destination="gB8-7J-7V6" eventType="touchUpInside" id="Y23-Zb-3ts"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="systemMenuLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="fKR-Am-W7z">
+                                <rect key="frame" x="173" y="111" width="254" height="71"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="71" id="3IE-IO-pms"/>
+                                    <constraint firstAttribute="width" constant="254" id="OJU-He-woj"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.36862745099999999" green="0.2470588235" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="hrO-9m-c4f" secondAttribute="centerX" id="7Lo-Bw-yGZ"/>
-                            <constraint firstItem="fKR-Am-W7z" firstAttribute="top" secondItem="TES-JW-gOa" secondAttribute="bottom" constant="45" id="CzV-lY-ogc"/>
                             <constraint firstAttribute="trailingMargin" secondItem="hrO-9m-c4f" secondAttribute="trailing" id="VSZ-ZH-zEV"/>
-                            <constraint firstItem="fKR-Am-W7z" firstAttribute="trailing" secondItem="R3b-pO-Udj" secondAttribute="trailingMargin" id="bJc-Qh-S0V"/>
                             <constraint firstItem="hrO-9m-c4f" firstAttribute="leading" secondItem="R3b-pO-Udj" secondAttribute="leadingMargin" id="bjN-UK-EmU"/>
-                            <constraint firstItem="fKR-Am-W7z" firstAttribute="leading" secondItem="R3b-pO-Udj" secondAttribute="leadingMargin" id="dKX-Yo-gft"/>
                             <constraint firstItem="cpS-dB-Hwn" firstAttribute="top" secondItem="hrO-9m-c4f" secondAttribute="bottom" constant="199" id="jSk-NZ-uiX"/>
-                            <constraint firstItem="0xy-fU-qNb" firstAttribute="centerX" secondItem="hrO-9m-c4f" secondAttribute="centerX" id="lYU-0c-pKG"/>
+                            <constraint firstItem="0xy-fU-qNb" firstAttribute="centerX" secondItem="hrO-9m-c4f" secondAttribute="centerX" constant="1" id="lYU-0c-pKG"/>
+                            <constraint firstItem="hrO-9m-c4f" firstAttribute="top" secondItem="fKR-Am-W7z" secondAttribute="bottom" constant="14" id="lfM-RZ-E9H"/>
+                            <constraint firstItem="fKR-Am-W7z" firstAttribute="centerX" secondItem="hrO-9m-c4f" secondAttribute="centerX" id="lrg-2C-A0f"/>
                             <constraint firstAttribute="centerY" secondItem="hrO-9m-c4f" secondAttribute="centerY" constant="7" id="okU-X1-YoE"/>
                             <constraint firstItem="cpS-dB-Hwn" firstAttribute="top" secondItem="0xy-fU-qNb" secondAttribute="bottom" constant="133" id="r0Y-g5-FO5"/>
                             <constraint firstItem="0xy-fU-qNb" firstAttribute="top" secondItem="hrO-9m-c4f" secondAttribute="bottom" constant="36" id="xtN-Th-ZKk"/>
@@ -863,7 +881,6 @@
         <image name="Bkg_SideMenu.png" width="684" height="483"/>
         <image name="Hamburger" width="32" height="32"/>
         <image name="No_profilePic.png" width="240" height="300"/>
-        <image name="Survey.png" width="200" height="41"/>
         <image name="WorkInProgres.jpg" width="265" height="190"/>
         <image name="systemMenuLogo.png" width="254" height="71"/>
     </resources>
