--- a/GatewayConference/Tablecells/FaqTableCell/FAQTableViewCell.xib
+++ b/GatewayConference/Tablecells/FaqTableCell/FAQTableViewCell.xib
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="85" id="KGk-i7-Jjw" customClass="FAQTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="415" height="85"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="KGk-i7-Jjw" customClass="FAQTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="415" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Faq_Background.png" translatesAutoresizingMaskIntoConstraints="NO" id="WcX-QP-nOU">
-                        <rect key="frame" x="13" y="14" width="387" height="57"/>
+                        <rect key="frame" x="13" y="15" width="387" height="66"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7SV-Sz-kB9">
-                        <rect key="frame" x="15" y="18" width="379" height="28"/>
+                        <rect key="frame" x="23" y="19" width="356" height="32"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="379" id="6Gm-fP-qA8"/>
+                            <constraint firstAttribute="width" constant="356" id="6Gm-fP-qA8"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-BoldItalic" family="Helvetica Neue" pointSize="15"/>
                         <color key="textColor" red="0.84237484056122447" green="0.20820850761689821" blue="0.13192038081614227" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mH3-er-q4n">
-                        <rect key="frame" x="15" y="48" width="379" height="18"/>
+                        <rect key="frame" x="24" y="55" width="376" height="18"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                         <color key="textColor" red="0.51853475765306123" green="0.31462776587557173" blue="0.14208626468701799" alpha="1" colorSpace="calibratedRGB"/>
@@ -39,20 +39,20 @@
                 <color key="backgroundColor" red="0.36862745099999999" green="0.2470588235" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="WcX-QP-nOU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="4T3-Id-oPk"/>
-                    <constraint firstItem="7SV-Sz-kB9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="56d-h4-AOX"/>
+                    <constraint firstItem="7SV-Sz-kB9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="11" id="56d-h4-AOX"/>
                     <constraint firstAttribute="trailingMargin" secondItem="WcX-QP-nOU" secondAttribute="trailing" constant="7" id="58T-nH-363"/>
                     <constraint firstItem="mH3-er-q4n" firstAttribute="top" secondItem="7SV-Sz-kB9" secondAttribute="bottom" constant="1" id="DGi-Tu-Snm"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="7SV-Sz-kB9" secondAttribute="trailing" constant="13" id="Eiu-xL-z84"/>
-                    <constraint firstItem="mH3-er-q4n" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="Fh3-NC-CEf"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="7SV-Sz-kB9" secondAttribute="trailing" constant="28" id="Eiu-xL-z84"/>
+                    <constraint firstItem="mH3-er-q4n" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="16" id="Fh3-NC-CEf"/>
                     <constraint firstAttribute="bottomMargin" secondItem="mH3-er-q4n" secondAttribute="bottom" constant="66" id="LO2-0J-pv3"/>
-                    <constraint firstItem="mH3-er-q4n" firstAttribute="leading" secondItem="7SV-Sz-kB9" secondAttribute="leading" id="M4E-T8-GOy"/>
+                    <constraint firstItem="mH3-er-q4n" firstAttribute="leading" secondItem="7SV-Sz-kB9" secondAttribute="leading" constant="1" id="M4E-T8-GOy"/>
                     <constraint firstAttribute="trailingMargin" secondItem="WcX-QP-nOU" secondAttribute="trailing" constant="20" id="N6V-Rj-nYk"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="WcX-QP-nOU" secondAttribute="bottom" constant="5" id="OXJ-yP-ECo"/>
-                    <constraint firstItem="7SV-Sz-kB9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="SSo-Vx-PpW"/>
-                    <constraint firstItem="WcX-QP-nOU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="6" id="SgB-ee-geF"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="mH3-er-q4n" secondAttribute="bottom" constant="10" id="XTh-wk-rjW"/>
-                    <constraint firstItem="mH3-er-q4n" firstAttribute="top" secondItem="7SV-Sz-kB9" secondAttribute="bottom" constant="2" id="cId-UW-wj5"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="mH3-er-q4n" secondAttribute="trailing" constant="13" id="jd1-9Q-3Zh"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="WcX-QP-nOU" secondAttribute="bottom" id="OXJ-yP-ECo"/>
+                    <constraint firstItem="7SV-Sz-kB9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="15" id="SSo-Vx-PpW"/>
+                    <constraint firstItem="WcX-QP-nOU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="SgB-ee-geF"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="mH3-er-q4n" secondAttribute="bottom" constant="8" id="XTh-wk-rjW"/>
+                    <constraint firstItem="mH3-er-q4n" firstAttribute="top" secondItem="7SV-Sz-kB9" secondAttribute="bottom" constant="4" id="cId-UW-wj5"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="mH3-er-q4n" secondAttribute="trailing" constant="7" id="jd1-9Q-3Zh"/>
                     <constraint firstItem="7SV-Sz-kB9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="19" id="mzw-zb-XMR"/>
                     <constraint firstItem="WcX-QP-nOU" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="5" id="sMe-gs-3nB"/>
                 </constraints>
@@ -70,7 +70,7 @@
                 <outlet property="answerLabel" destination="mH3-er-q4n" id="xBF-4J-xey"/>
                 <outlet property="questionLabel" destination="7SV-Sz-kB9" id="PR0-jT-Df9"/>
             </connections>
-            <point key="canvasLocation" x="414.5" y="113.5"/>
+            <point key="canvasLocation" x="414.5" y="112"/>
         </tableViewCell>
     </objects>
     <resources>
